<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RegisterUserActivity"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
 >


    <EditText
        android:id="@+id/et_name"
        style="@style/App_EditTextStyle"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username"
        style="@style/App_EditTextStyle"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_email"
        style="@style/App_EditTextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <Spinner
        android:id="@+id/sp_country"
        style="@style/App_Spinner_Style"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Spinner
        android:id="@+id/sp_city"
        style="@style/App_Spinner_Style"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/editTextMarginTop"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_country" />

    <EditText
        android:id="@+id/et_city"
        style="@style/App_EditTextStyle"
        android:inputType="textEmailAddress"

        android:hint="@string/city"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_city" />

    <Spinner
        android:id="@+id/sp_categories"
        style="@style/App_Spinner_Style"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city" />

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="cooooooooool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_categories" />



    <EditText
        android:id="@+id/et_password"
        style="@style/App_EditTextStyle"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/editTextMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_categories" />

    <Button
        android:id="@+id/btn_register"
        style="@style/App_Button_Style"
        android:text="@string/register"
        android:layout_marginTop="@dimen/editTextMarginTop"
        android:layout_marginBottom="@dimen/editTextMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>


</android.support.constraint.ConstraintLayout>